# example_package_genprime_perry2of5

./: LICENSE  README.md  pyproject.toml
src/example_package_genprime_perry2of5/: __init__.py  primes.py  show_primes.py
test/example_package_genprime_perry2of5/: __init__.py  known_primes.py  test_primes.py
