[project]
name = "example_package_genprime_perry2of5"
version = "0.0.1"
authors = [
  { name="Tim Perry", email="perry2of5+example_package_genprime_perry2of5@gmail.com" },
]
description = "A small example package which can generate primes"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/perry2of5/example_package_genprime_perry2of5"
Issues = "https://github.com/perry2of5/example_package_genprime_perry2of5/issues"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
norecursedirs = ["docs", "build"]
testpaths = ["test", "integration"]
pythonpath = ["."]